cmake_minimum_required(VERSION 3.8 FATAL_ERROR)

# -----------------------------------------------------------------------------------------------------------------------------
# FLAGS
# -----------------------------------------------------------------------------------------------------------------------------

if (APPLE)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -stdlib=libc++")
endif()

# -----------------------------------------------------------------------------------------------------------------------------
# FILES
# -----------------------------------------------------------------------------------------------------------------------------

# Sources
set(TE_SAMPLE_SOURCES "main.cpp")

# Source groups
source_group("src" FILES ${TE_SAMPLE_SOURCES})

# -----------------------------------------------------------------------------------------------------------------------------
# TARGETS
# -----------------------------------------------------------------------------------------------------------------------------

if(APPLE)
    add_executable(1_Triangle MACOSX_BUNDLE ${TE_SAMPLE_SOURCES})
elseif(WIN32)
    add_executable(1_Triangle WIN32 ${TE_SAMPLE_SOURCES})
else()
    add_executable(1_Triangle ${TE_SAMPLE_SOURCES})
endif()

set_target_properties(1_Triangle PROPERTIES FOLDER "samples")

# -----------------------------------------------------------------------------------------------------------------------------
# LINKING
# -----------------------------------------------------------------------------------------------------------------------------

# Link Platform
target_link_libraries(1_Triangle TerminusEngine)